--- a/game-engine.web/src/main/resources/consoleweb-assets/tasks/modal_task_edit.html
+++ b/game-engine.web/src/main/resources/consoleweb-assets/tasks/modal_task_edit.html
@@ -33,8 +33,9 @@
     </div>
     <div class="form-group">
       <label for="schedule">{{'labels:lbl_task_schedule' | i18next}}</label>
-      <input type="text" class="form-control" name="schedule" id="schedule" data-ng-model="input.schedule" placeholder="{{'labels:lbl_enter_new_name' | i18next}}" required autofocus ng-if="input.edit"/>
-	  <input type="text" class="form-control" name="schedule" id="schedule" data-ng-model="input.schedule" placeholder="{{'labels:lbl_enter_new_name' | i18next}}" required ng-if="!input.edit"/>
+      <!--<input type="text" class="form-control" name="schedule" id="schedule" data-ng-model="input.schedule" placeholder="{{'labels:lbl_enter_new_name' | i18next}}" required autofocus ng-if="input.edit"/>
+	  <input type="text" class="form-control" name="schedule" id="schedule" data-ng-model="input.schedule" placeholder="{{'labels:lbl_enter_new_name' | i18next}}" required ng-if="!input.edit"/>-->
+      <cron-selection output="input.schedule" init="input.schedule"></cron-selection>
     </div>
     <div class="form-group">
       <label for="itemToNotificate">{{'labels:lbl_task_itemToNotificate' | i18next}}</label>
