Added button to stats page and init the style for the page

--- a/game-engine.web/src/main/resources/consoleweb-assets/index.html
+++ b/game-engine.web/src/main/resources/consoleweb-assets/index.html
@@ -20,72 +20,78 @@
 <html ng-app="gamificationEngine">
 
 <head>
-	<meta lang="en">
-	<meta charset="utf-8">
+    <meta lang="en">
+    <meta charset="utf-8">
 
-	<!-- Single Page Application (SPA) - WEB APP -->
-	<title>Gamification engine</title>
+    <!-- Single Page Application (SPA) - WEB APP -->
+    <title>Gamification engine</title>
 
-	<!-- Cascading style sheets  (CSS) -->
-	<link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
-	<link href="bower_components/bootstrap-vertical-tabs/bootstrap.vertical-tabs.min.css" rel="stylesheet" />
-	<link href="bower_components/angular-toggle-switch/angular-toggle-switch.css" rel="stylesheet" />
-	<link href="bower_components/angular-toggle-switch/angular-toggle-switch-bootstrap.css" rel="stylesheet" />
-	<link href="bower_components/angular-ui-bootstrap-datetimepicker/datetimepicker.css" rel="stylesheet" />
-	<link href="css/style.css" rel="stylesheet" />
+    <!-- Cascading style sheets  (CSS) -->
+    <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="bower_components/bootstrap-vertical-tabs/bootstrap.vertical-tabs.min.css" rel="stylesheet" />
+    <link href="bower_components/angular-toggle-switch/angular-toggle-switch.css" rel="stylesheet" />
+    <link href="bower_components/angular-toggle-switch/angular-toggle-switch-bootstrap.css" rel="stylesheet" />
+    <link href="bower_components/angular-ui-bootstrap-datetimepicker/datetimepicker.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet" />
+    <!-- Stats file (simple style for the page) -->
+    <link href="game-stats/stats-style.css" rel="stylesheet" />
 
 </head>
 
 <body data-ng-controller="MainCtrl">
-	<div class="navbar navbar-default navbar-fixed-top" role="navigation">
-		<div class="container">
-			<div class="row">
-				<a class="navbar-brand navbar-brand-bigger" data-ng-click="goHome()" href="#/home">Gamification engine</a>
-			</div>
-			<div class="row">
-				<h4 style="display: block" data-ng-show="page === 'game'">{{'lbl_game_menu' | i18next}}</h4>
-			</div>
-			<div class="row">
-				<h4 style="display: block" data-ng-show="page == 'monitor'">{{'lbl_monitor_menu' | i18next}}</h4>
-			</div>
-		</div>
-	</div>
-	<div class="container" style="margin-top: 20px;">
-		<div ui-view></div>
-	</div>
-	<div class="navbar navbar-default navbar-fixed-bottom">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12"><img height="50px" src="img/STREETLIFE_logo.png"></div>
-			</div>
-		</div>
-	</div>
+    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="row">
+                <a class="navbar-brand navbar-brand-bigger" data-ng-click="goHome()" href="#/home">Gamification engine</a>
+            </div>
+            <div class="row">
+                <h4 style="display: block" data-ng-show="page === 'game'">{{'lbl_game_menu' | i18next}}</h4>
+            </div>
+            <div class="row">
+                <h4 style="display: block" data-ng-show="page == 'monitor'">{{'lbl_monitor_menu' | i18next}}</h4>
+            </div>
+        </div>
+    </div>
+    <div class="container" style="margin-top: 20px;">
+        <div ui-view></div>
+    </div>
+    <div class="navbar navbar-default navbar-fixed-bottom">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12"><img height="50px" src="img/STREETLIFE_logo.png"></div>
+            </div>
+        </div>
+    </div>
 
-	<script src="bower_components/moment/moment.js"></script>
-	<!-- AngularJS -->
-	<script src="bower_components/angular/angular.min.js"></script>
-	<script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-	<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-	<script src="bower_components/angular-toggle-switch/angular-toggle-switch.min.js"></script>
-	<script src="bower_components/angular-ui-bootstrap-datetimepicker/datetimepicker.js"></script>
+    <script src="bower_components/moment/moment.js"></script>
+    <!-- AngularJS -->
+    <script src="bower_components/angular/angular.min.js"></script>
+    <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+    <script src="bower_components/angular-toggle-switch/angular-toggle-switch.min.js"></script>
+    <script src="bower_components/angular-ui-bootstrap-datetimepicker/datetimepicker.js"></script>
+    <script src="bower_components/Chart.js/Chart.js"></script>
+    <script src="bower_components/angular-chart.js/dist/angular-chart.min.js"></script>
 
-	<!-- i18next -->
-	<script src="bower_components/i18next/i18next.min.js"></script>
-	<script src="bower_components/ng-i18next/dist/ng-i18next.min.js"></script>
+    <!-- i18next -->
+    <script src="bower_components/i18next/i18next.min.js"></script>
+    <script src="bower_components/ng-i18next/dist/ng-i18next.min.js"></script>
 
-	<!-- Custom -->
-	<script src="app.js"></script>
-	<script src="modals/modals-controllers.js"></script>
-	<script src="main.js"></script>
-	<script src="actions/actions.js"></script>
-	<script src="game/game.js"></script>
-	<script src="game-monitor/game-monitor.js"></script>
-	<script src="home/home.js"></script>
-	<script src="login/login.js"></script>
-	<script src="rules/rules.js"></script>
-	<script src="tasks/tasks.js"></script>
-	<script src="services.js"></script>
-	<script src="i18next.js"></script>
+    <!-- Custom -->
+    <script src="app.js"></script>
+    <script src="modals/modals-controllers.js"></script>
+    <script src="main.js"></script>
+    <script src="actions/actions.js"></script>
+    <script src="game/game.js"></script>
+    <script src="game-monitor/game-monitor.js"></script>
+    <script src="game-stats/game-stats.js"></script>
+    <script src="home/home.js"></script>
+    <script src="login/login.js"></script>
+    <script src="rules/rules.js"></script>
+    <script src="tasks/tasks.js"></script>
+    <script src="services.js"></script>
+    <script src="game-stats/stats-service.js"></script>
+    <script src="i18next.js"></script>
 </body>
 
 </html>
