--- a/game-engine.web/src/main/resources/consoleweb-assets/index.html
+++ b/game-engine.web/src/main/resources/consoleweb-assets/index.html
@@ -70,7 +70,7 @@
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
     <script src="bower_components/angular-toggle-switch/angular-toggle-switch.min.js"></script>
     <script src="bower_components/angular-ui-bootstrap-datetimepicker/datetimepicker.js"></script>
-    <script src="bower_components/Chart.js/Chart.js"></script>
+    <script src="bower_components/Chart.js/dist/Chart.js"></script>
     <script src="bower_components/angular-chart.js/dist/angular-chart.min.js"></script>
 
     <!-- i18next -->
