Reorder views logic for users stats

--- a/game-engine.web/src/main/resources/consoleweb-assets/index.html
+++ b/game-engine.web/src/main/resources/consoleweb-assets/index.html
@@ -34,7 +34,7 @@
     <link href="bower_components/angular-ui-bootstrap-datetimepicker/datetimepicker.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
     <!-- Stats file (simple style for the page) -->
-    <link href="game-stats/stats-style.css" rel="stylesheet" />
+    <link href="stats/stats-style.css" rel="stylesheet" />
 
 </head>
 
@@ -84,13 +84,15 @@
     <script src="actions/actions.js"></script>
     <script src="game/game.js"></script>
     <script src="game-monitor/game-monitor.js"></script>
-    <script src="game-stats/game-stats.js"></script>
+    <script src="stats/menu.js"></script>
+    <script src="stats/game-stats/game-stats.js"></script>
+    <script src="stats/user-stats/user-stats.js"></script>
     <script src="home/home.js"></script>
     <script src="login/login.js"></script>
     <script src="rules/rules.js"></script>
     <script src="tasks/tasks.js"></script>
     <script src="services.js"></script>
-    <script src="game-stats/stats-service.js"></script>
+    <script src="stats/stats-service.js"></script>
     <script src="i18next.js"></script>
 </body>
 
