--- a/game-engine.web/src/main/resources/consoleweb-assets/stats/user-stats/user-stats.html
+++ b/game-engine.web/src/main/resources/consoleweb-assets/stats/user-stats/user-stats.html
@@ -1,5 +1,5 @@
 <div class="row">
     <div class="col-lg-12">
-        <h2>Statistiche per il giocatore: {{player.name}}</h2>
+        <h2>Statistiche di gioco degli utenti</h2>
     </div>
 </div>
