--- a/game-engine.web/src/main/resources/consoleweb-assets/home/home.html
+++ b/game-engine.web/src/main/resources/consoleweb-assets/home/home.html
@@ -46,7 +46,7 @@ Text will be soon placed in the middle of the panel-body
                     <a class="pull-right game-btn btn btn-default btn-circle right-spaced" href="#/game-monitor/{{game.id}}" uib-tooltip="{{'labels:lbl_monitor_menu' | i18next}}">
                         <span class="glyphicon glyphicon-tasks"></span>
                     </a>
-                    <a class="pull-right game-btn btn btn-primary btn-circle right-spaced" href="#/game-stats/{{game.id}}" uib-tooltip="{{'labels:lbl_stats_menu' | i18next}}">
+                    <a class="pull-right game-btn btn btn-primary btn-circle right-spaced" href="#/stats/{{game.id}}/game-stats" uib-tooltip="{{'labels:lbl_stats_menu' | i18next}}">
                         <span class="glyphicon glyphicon-stats"></span>
                     </a>
                 </div>
