--- a/game-engine.web/src/main/resources/consoleweb-assets/rules/rules.html
+++ b/game-engine.web/src/main/resources/consoleweb-assets/rules/rules.html
@@ -19,48 +19,60 @@
 <div data-ng-controller="RulesCtrl">
 	<div class="row top-margined">
 		<div class="col-md-12 horizontalCollapse" ng-class="{'in': !list}">
-			<h4>{{title | i18next}} <span ng-show="input.name">&lt;{{input.name}}&gt;</span></h4>
-			<form role="form">
-				<div class="modal-body">
-					<div class="row">
-						<div class="col-md-12 text-center">
-							<uib-alert ng-if="!!alerts.ruleError" type="danger">{{alerts.ruleError | i18next}}</uib-alert>
+			<div class="col-md-12">
+				<h4>{{title | i18next}} <span ng-show="input.name">&lt;{{input.name}}&gt;</span></h4>
+				<h5>Status: {{input.status}}</h5>
+			</div>
+			<div class="col-md-12">
+				<form role="form">
+					<div class="modal-body">
+						<div class="row">
+							<div class="col-md-12 text-center">
+								<uib-alert ng-if="!!alerts.ruleError" type="danger">{{alerts.ruleError | i18next}}</uib-alert>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-12 text-center">
+								<uib-alert ng-if="!!alerts.nameError" type="danger">{{'messages:msg_empty_fields' | i18next}}</uib-alert>
+							</div>
+						</div>
+						<div class="form-group" ng-class="{'has-error': alerts.nameError}">
+							<label for="name">{{'labels:lbl_name' | i18next}}</label>
+							<div class="clearfix"></div>
+							<input type="text" class="form-control text" id="name" data-ng-model="input.name" placeholder="{{'labels:lbl_enter_new_name' | i18next}}" autofocus/>
+						</div>
+						<div class="row">
+							<div class="col-md-12">
+								<uib-alert ng-if="!!alerts.ruleValidation" type="danger">Rules engine returns error:<br/><br/>
+									<p data-ng-repeat="error in alerts.ruleValidation">{{error}}</p>
+								</uib-alert>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-12 text-center">
+								<uib-alert ng-if="!!alerts.contentError" type="danger">{{'messages:msg_empty_fields' | i18next}}</uib-alert>
+							</div>
+						</div>
+						<div class="row">
+							<div class="form-group col-md-12" ng-class="{'has-error': alerts.contentError || alerts.ruleValidation, 'col-md-6 !important': input.published && input.draftContent}">
+								<label for="content">{{(input.published) ? 'labels:lbl_rule_content' : 'labels:lbl_rule_draft' | i18next}}</label>
+								<div class="clearfix"></div>
+								<textarea class="rule-textarea form-control" data-ng-model="input.ruleContent" ng-disabled="input.draftContent"></textarea>
+							</div>
+							<div class="form-group col-md-6" ng-if="input.published && input.draftContent" ng-class="{'has-error': alerts.draftError || alerts.ruleValidation}">
+								<label for="content" ng-if="input.published && input.draftContent">{{'labels:lbl_rule_draft' | i18next}}</label>
+								<div class="clearfix"></div>
+								<textarea class="rule-textarea form-control" data-ng-model="input.draftContent"></textarea>
+							</div>
 						</div>
 					</div>
-					<div class="row">
-						<div class="col-md-12 text-center">
-							<uib-alert ng-if="!!alerts.nameError" type="danger">{{'messages:msg_empty_fields' | i18next}}</uib-alert>
-						</div>
+					<div class="modal-footer">
+						<button class="btn btn-success" data-ng-click="saveRule(true)" ng-disabled="disabled">{{'labels:btn_publish' | i18next}}</button>
+						<button class="btn btn-warning" data-ng-click="saveRule(false)" ng-disabled="disabled">{{'labels:btn_draft' | i18next}}</button>
+						<button class="btn btn-danger" data-ng-click="cancel()" ng-disabled="disabled">{{'labels:btn_cancel' | i18next}}</button>
 					</div>
-					<div class="form-group" ng-class="{'has-error': alerts.nameError}">
-						<label for="name">{{'labels:lbl_name' | i18next}}</label>
-						<div class="clearfix"></div>
-						<input type="text" class="form-control text" id="name" data-ng-model="input.name" placeholder="{{'labels:lbl_enter_new_name' | i18next}}"
-							autofocus/>
-					</div>
-					<div class="row">
-						<div class="col-md-12">
-							<uib-alert ng-if="!!alerts.ruleValidation" type="danger">Rules engine returns error:<br/><br/>
-								<p data-ng-repeat="error in alerts.ruleValidation">{{error}}</p>
-							</uib-alert>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-12 text-center">
-							<uib-alert ng-if="!!alerts.contentError" type="danger">{{'messages:msg_empty_fields' | i18next}}</uib-alert>
-						</div>
-					</div>
-					<div class="form-group" ng-class="{'has-error': alerts.contentError || alerts.ruleValidation}">
-						<label for="content">{{'labels:lbl_rule_content' | i18next}}</label>
-						<div class="clearfix"></div>
-						<textarea class="rule-textarea form-control" data-ng-model="input.ruleContent"></textarea>
-					</div>
-				</div>
-				<div class="modal-footer">
-					<button class="btn btn-success" data-ng-click="save()" ng-disabled="disabled">{{action | i18next}}</button>
-					<button class="btn btn-danger" data-ng-click="cancel()" ng-disabled="disabled">{{'labels:btn_cancel' | i18next}}</button>
-				</div>
-			</form>
+				</form>
+			</div>
 		</div>
 		<div class="col-md-12 horizontalCollapse" ng-class="{'in': list}">
 			<div class="row">
@@ -73,23 +85,55 @@
 			</div>
 			<div class="table-actions col-md-12">
 				<hr/>
+				<div class="col-md-12" id="rule-filter">
+					<form class="form-inline">
+						<div class="form-group">
+							<h5>Order:</h5>
+							<div class="select">
+								<select ng-model="order">
+									<option value="lastUpdate">recent</option>
+									<option value="name">alphabetically</option>
+								</select>
+							</div>
+						</div>
+						<div class="form-group">
+							<h5>Filter:</h5>
+							<div class="select">
+								<select ng-model="search">
+									<option value="all">all</option>
+									<option value="true">published</option>
+									<option value="false">draft</option>
+								</select>
+							</div>
+						</div>
+						<div class="form-group">
+							<h5>Search:</h5>
+							<div class="form-group has-feedback">
+								<input type="text" class="form-control" ng-model="searchText" />
+								<i class="glyphicon glyphicon-search form-control-feedback"></i>
+								<!--<span class="input-group-addon"><span class="glyphicon glyphicon-ok"></span></span>-->
+							</div>
+						</div>
+					</form>
+				</div>
 				<h5>{{'labels:lbl_rules_menu' | i18next}}</h5>
 				<table class="table table-striped table-bordered">
 					<tbody>
-						<tr data-ng-repeat="rule in game.rules">
+						<tr data-ng-repeat="rule in game.rules | filter: filterRules | filter: searchRules | orderBy: order">
 							<td>
 								<div class="row rule">
+									<div class="status" ng-class="{'published': rule.published, 'draft': !rule.published}"><span><!--{{rule.status}}-->{{rule.published ? 'published' : 'draft'}}</span></div>
+									<div class="date" ng-if="(rule.published && !rule.draftContent) || !rule.published"><span>Last edit {{convertDate(rule.lastUpdate)}}</span></div>
+									<div class="date" ng-if="rule.published && rule.draftContent"><span>Save as draft {{convertDate(rule.lastUpdate)}}</span></div>
 									<div class="col-md-12">
 										{{rule.name ? rule.name : rule.id}}
 										<button type="button" class="btn btn-danger btn-circle pull-right" data-ng-click="deleteRule(rule)" uib-tooltip="{{'labels:tool_delete' | i18next}}">
 										<span class="glyphicon glyphicon-trash"></span>
 									</button>
-										<button type="button" class="btn btn-primary btn-circle pull-right" style="margin-right: 1em;" data-ng-click="editRule(rule)"
-											uib-tooltip="{{'labels:tool_edit' | i18next}}">
+										<button type="button" class="btn btn-primary btn-circle pull-right" style="margin-right: 1em;" data-ng-click="editRule(rule)" uib-tooltip="{{'labels:tool_edit' | i18next}}">
 										<span class="glyphicon glyphicon-pencil"></span>
 									</button>
-										<button type="button" class="btn btn-warning btn-circle pull-right" style="margin-right: 1em;" data-ng-click="hideRule = !hideRule;showRule($index)"
-											uib-tooltip="{{'labels:tool_view' | i18next}}">
+										<button type="button" class="btn btn-warning btn-circle pull-right" style="margin-right: 1em;" data-ng-click="hideRule = !hideRule;showRule($index)" uib-tooltip="{{'labels:tool_view' | i18next}}">
 										<span class="glyphicon" ng-class="{'glyphicon-eye-open': hideRule, 'glyphicon-eye-close': !hideRule}"></span>
 									</button>
 									</div>
