--- a/game-engine.web/src/main/resources/consoleweb-assets/tasks/tasks.html
+++ b/game-engine.web/src/main/resources/consoleweb-assets/tasks/tasks.html
@@ -57,10 +57,43 @@
 					</div>
 					<div class="row">
 						<div class="col-md-6 text-center">
-							<uib-alert ng-if="!!alerts.cronError" type="danger">{{'messages:msg_empty_fields' | i18next}}</uib-alert>
+							<uib-alert ng-if="!!alerts.typeError" type="danger">{{'messages:msg_empty_fields' | i18next}}</uib-alert>
 						</div>
 						<div class="col-md-6 text-center">
 							<uib-alert ng-if="!!alerts.pointsError" type="danger">{{'messages:msg_empty_fields' | i18next}}</uib-alert>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-6 form-group" ng-class="{'has-error': alerts.typeError}">
+							<div>
+								<label for="schedule">Type</label>
+							</div>
+							<label class="radio-inline">
+							  	<input type="radio" name="inlineRadioOptions" value="general" ng-model="input.type">
+								<span>General</span>
+							</label>
+							<label class="radio-inline">
+								<input type="radio" name="inlineRadioOptions" value="incremental" ng-model="input.type">
+								<span>Incremental</span>
+							</label>
+							<!--<label for="schedule">{{'labels:lbl_task_schedule' | i18next}}</label>
+							<input type="text" class="form-control" name="schedule" id="schedule" data-ng-model="input.schedule" placeholder="{{'labels:lbl_enter_new_name' | i18next}}" required autofocus ng-if="input.edit" />
+							<input type="text" class="form-control" name="schedule" id="schedule" data-ng-model="input.schedule" placeholder="{{'labels:lbl_enter_new_name' | i18next}}" required ng-if="!input.edit" />-->
+						</div>
+
+						<div class="col-md-6 form-group" ng-class="{'has-error': alerts.pointsError}">
+							<label for="itemType">{{'labels:lbl_task_itemType' | i18next}}</label>
+							<div class="select" style="width:100% !important;">
+								<select id="itemType" data-ng-model="input.itemType" data-ng-options="point.name as point.name for point in game.pointConcept" required></select>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-6 text-center">
+							<uib-alert ng-if="!!alerts.cronError" type="danger">{{'messages:msg_empty_fields' | i18next}}</uib-alert>
+						</div>
+						<div class="col-md-6 text-center">
+							<uib-alert ng-if="!!alerts.classError" type="danger">{{'messages:msg_empty_fields' | i18next}}</uib-alert>
 						</div>
 					</div>
 					<div class="row">
@@ -68,19 +101,9 @@
 							<label for="schedule">{{'labels:lbl_task_schedule' | i18next}}</label>
 							<input type="text" class="form-control" name="schedule" id="schedule" data-ng-model="input.schedule" placeholder="{{'labels:lbl_enter_new_name' | i18next}}" required autofocus ng-if="input.edit" />
 							<input type="text" class="form-control" name="schedule" id="schedule" data-ng-model="input.schedule" placeholder="{{'labels:lbl_enter_new_name' | i18next}}" required ng-if="!input.edit" />
+							<span id="cron-gen" ng-click="generateCron()">generate cron expression</span>
 						</div>
-						<div class="col-md-6 form-group" ng-class="{'has-error': alerts.pointsError}">
-							<label for="itemType">{{'labels:lbl_task_itemType' | i18next}}</label>
-							<select id="itemType" class="form-control" data-ng-model="input.itemType" data-ng-options="point.name as point.name for point in game.pointConcept" required></select>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-6 col-md-offset-6 text-center">
-							<uib-alert ng-if="!!alerts.classError" type="danger">{{'messages:msg_empty_fields' | i18next}}</uib-alert>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-md-6 col-md-offset-6 form-group" ng-class="{'has-error': alerts.classError}">
+						<div class="col-md-6 form-group" ng-class="{'has-error': alerts.classError}">
 							<label for="className">{{'labels:lbl_task_classificationName' | i18next}}</label>
 							<input type="text" class="form-control" id="className" data-ng-model="input.classificationName" placeholder="{{'labels:lbl_enter_new_name' | i18next}}" required/>
 						</div>
@@ -98,20 +121,46 @@
 	</div>
 	<hr/>
 	<div class="row vertical-spacing">
+		<div class="col-md-12" id="classification-filter">
+			<form class="form-inline">
+				<div class="form-group">
+					<h5>Filter:</h5>
+					<div class="select">
+						<select ng-model="search">
+							<option value="all">all</option>
+							<option value="general">general</option>
+							<option value="incremental">incremental</option>
+						</select>
+					</div>
+				</div>
+			</form>
+		</div>
 		<!--<uib-tabset>
 			<uib-tab class="clickable" heading="{{'labels:lbl_classification' | i18next}}" active="active.classification">-->
 		<div class="table-actions col-md-12">
 			<table class="table table-striped table-bordered">
 				<tbody>
-					<tr data-ng-repeat="task in game.classificationTask">
+					<tr data-ng-repeat="task in game.classificationTask | filter: filterTasks">
 						<td>
-							{{task.name}}
-							<button type="button" class="btn btn-danger btn-edit btn-circle pull-right" data-ng-click="deleteTask(task)" uib-tooltip="{{'labels:tool_delete' | i18next}}">
-								<span class="glyphicon glyphicon-trash"></span>
-							</button>
-							<button type="button" class="btn btn-primary btn-edit btn-circle pull-right" style="margin-right: 1em;" data-ng-click="editTask(task)" uib-tooltip="{{'labels:tool_edit' | i18next}}">
-								<span class="glyphicon glyphicon-pencil"></span>
-							</button>
+							<div class="row task">
+								<div class="type" ng-class="{'general': task.type == 'general', 'incremental': task.type == 'incremental'}"><span>{{task.type}}</span></div>
+								<div class="status"><span>Status: {{task.status}}</span></div>
+								<div class="col-md-12">
+									{{task.name}}
+									<button type="button" class="btn btn-danger btn-edit btn-circle pull-right" data-ng-click="deleteTask(task)" uib-tooltip="{{'labels:tool_delete' | i18next}}">
+										<span class="glyphicon glyphicon-trash"></span>
+									</button>
+									<button type="button" class="btn btn-primary btn-edit btn-circle pull-right" style="margin-right: 1em;" data-ng-click="editTask(task)" uib-tooltip="{{'labels:tool_edit' | i18next}}">
+										<span class="glyphicon glyphicon-pencil"></span>
+									</button>
+									<button ng-if="task.status == 'active'" type="button" class="btn btn-warning btn-edit btn-circle pull-right" style="margin-right: 1em;" data-ng-click="switchStatus(task)" uib-tooltip="pause">
+										<span class="glyphicon glyphicon-pause"></span>
+									</button>
+									<button ng-if="task.status == 'pause'" type="button" class="btn btn-success btn-edit btn-circle pull-right" style="margin-right: 1em;" data-ng-click="switchStatus(task)" uib-tooltip="active">
+										<span class="glyphicon glyphicon-play"></span>
+									</button>
+								</div>
+							</div>
 						</td>
 					</tr>
 				</tbody>
