Added cron-job generator

--- a/game-engine.web/src/main/resources/consoleweb-assets/index.html
+++ b/game-engine.web/src/main/resources/consoleweb-assets/index.html
@@ -32,6 +32,7 @@
 	<link href="bower_components/angular-toggle-switch/angular-toggle-switch.css" rel="stylesheet" />
 	<link href="bower_components/angular-toggle-switch/angular-toggle-switch-bootstrap.css" rel="stylesheet" />
 	<link href="bower_components/angular-ui-bootstrap-datetimepicker/datetimepicker.css" rel="stylesheet" />
+	<link href="bower_components/angular-cron-jobs/dist/angular-cron-jobs.min.css" rel="stylesheet" />
 	<link href="css/style.css" rel="stylesheet" />
 
 </head>
@@ -73,6 +74,7 @@
 	<!-- i18next -->
 	<script src="bower_components/i18next/i18next.min.js"></script>
 	<script src="bower_components/ng-i18next/dist/ng-i18next.min.js"></script>
+	<script src="bower_components/angular-cron-jobs/dist/angular-cron-jobs.min.js"></script>
 
 	<!-- Custom -->
 	<script src="app.js"></script>
